
	* deployment.cpp (GetSystemTypefaces): New method to bypass
	needing to create a managed wrapper for FontManager.

	* fontmanager.cpp (GetVersion): New method that managed code
	needs.

2010-07-01  Alan McGovern  <amcgovern@novell.com>

	* textblock.h: Add validators to TextBlock.FontSize and
	  TextBlock.FontFamily.

2010-07-01  David Reveman  <davidr@novell.com>

	* uielement.cpp|h (GetRenderEffect): Add helper method.
	* uielement.cpp|h (GetProjectionEffect): Add helper method.

	* runtime.h:
	* runtime.cpp: Add RUNTIME_INIT_ENABLE_PROJECTIONS.

2010-07-01  David Reveman  <davidr@novell.com>

	New Effect/Projection code with hit testing support
	---------------------------------------------------

	 * Element Bounds

	Introduces 'local' and 'global' element bounds to more elegantly
	handle rendering to intermediate buffers.

	The 'local' bounds of an element exclude element and ancestor
	element properties as effects and perspective transformations.
	'local' bounds are used when rendering to an intermediate buffer.
	Intermediate buffers are required by Effect, Projection and
	BitmapCache properties.

	The 'global' bounds of an element exclude ancestor element
	properties as effects and perspective transformations.
	'global' bounds are used when computing 'local' bounds of
	ancestors.

	'surface' bounds (as returned by GetBounds and GetSubtreeBounds) are
	always in surface coordinates and include all ancestor properties.

	 * Rendering Order

	Element properties are applied as follows:
	1. OpacityMask
	2. Opacity
	3. Effect
	4. Projection
	5. RenderTransform
	6. LayoutTransform
	7. Parent Properties

	* dirty.cpp:
	* dirty.h: Add DirtyLocalProjection flag.
	Compute global/surface bounds and global bounds instead of
	surface bounds to determine when parent bounds need an update.

	* effect.cpp:
	* effect.h: Add shader offset properties and fix issues with
	X/Y viewport clipping.

	* frameworkelement.cpp: